--- a/assets/css/buttons.css
+++ b/assets/css/buttons.css
@@ -1,5 +1,5 @@
 .btn-primary {
-	@apply px-6 py-3 rounded bg-primary-600 text-white text-sm leading-4 font-bold whitespace-nowrap hover:bg-orange-400 focus:bg-orange-400;
+	@apply inline-flex items-center justify-center rounded-md border border-transparent bg-primary-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 sm:w-auto;
 }
 
 .btn-spinner,
